[PROD-8364] Fix spacing with activity nav

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -5408,6 +5408,10 @@ body.buddyboss-theme {
 	}
 }
 
+.activity-head-bar .activity-type-navs + .bb-subnav-filters-search {
+	margin-left: 20px;
+}
+
 .has-sidebar #buddypress .bb-profile-grid:has(.widget-area) {
 
 	.activity-head-bar {
